<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ShowPosition" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/info_akt_posi" />

    <EditText
        android:id="@+id/startLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startText"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/startText"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:text="@string/standard_start" />

    <TextView
        android:id="@+id/startText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView"
        android:layout_below="@+id/textView"
        android:text="@string/startText"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/endText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startLocation"
        android:layout_below="@+id/startLocation"
        android:text="@string/zielText"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/endLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/endText"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/endText"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:text="@string/standard_ziel" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/calcRouteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/endLocation"
        android:layout_below="@+id/endLocation"
        android:onClick="findRoute"
        android:text="@string/calcRoute" />

    <TextView
        android:id="@+id/routInfotext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/calcRouteButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />

    <ImageView
        android:id="@+id/nextStepImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/calcRouteButton"
        android:layout_alignRight="@+id/endLocation"
        android:layout_alignTop="@+id/calcRouteButton"
        android:layout_toRightOf="@+id/calcRouteButton"
        android:contentDescription="@string/content_desc_rl"
        android:scaleType="fitStart"
        android:src="@drawable/right" />

    <Button
        android:id="@+id/connectArduino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/routInfotext"
        android:layout_alignRight="@+id/routInfotext"
        android:onClick="connectBluetooth"
        android:text="@string/bluetooth_connect_button" />

    <Button
        android:id="@+id/buttonCalibration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/routInfotext"
        android:layout_alignLeft="@+id/routInfotext"
        android:onClick="startCalibrationActivity"
        android:text="@string/button_text_calibration" />

    <Button
        android:id="@+id/startSignal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/connectArduino"
        android:layout_alignRight="@+id/connectArduino"
        android:onClick="fakeGPS"
        android:text="Fake gps" />

</RelativeLayout>
