<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Bluetooth_Console" >

    <EditText
        android:id="@+id/bluetooth_send_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bluetooth_send_button"
        android:layout_alignBottom="@+id/bluetooth_send_button"
        android:ems="10"
        android:text="@string/emptyText" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/bluetooth_send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:onClick="sendText"
        android:text="@string/bluetooth_send_button" />

    <Button
        android:id="@+id/bluetoothConnectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bluetooth_send_text"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:onClick="connectBluetooth"
        android:text="@string/bluetooth_connect_button" />

    <Button
        android:id="@+id/bluetoothDisconnectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bluetoothConnectButton"
        android:layout_alignBottom="@+id/bluetoothConnectButton"
        android:layout_alignRight="@+id/bluetooth_send_button"
        android:enabled="false"
        android:onClick="disconnectBluetooth"
        android:text="@string/bluetooth_disconnect_button" />

    <TextView
        android:id="@+id/receiveText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3Pulses"
        android:layout_alignLeft="@+id/bluetooth_send_text"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/bluetooth_send_button"
        android:scrollbars="vertical"
        android:text="@string/emptyText" />

    <Button
        android:id="@+id/button3Pulses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bluetoothConnectButton"
        android:layout_alignLeft="@+id/bluetoothConnectButton"
        android:onClick="sendThreePulses"
        android:text="@string/button_3_Pulses_Text" />

</RelativeLayout>