<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="11"
    tools:context=".CalibrationDialogAngle" >

    <TextView
        android:id="@+id/angleCalibTitle"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_row="0"
        android:text="@string/calibrate_title_left"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="left|bottom"
        android:layout_row="2" />

    <Button
        android:id="@+id/button1"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="3"
        android:onClick="test"
        android:text="@string/button_test" />

    <Button
        android:id="@+id/button2"
        android:layout_column="1"
        android:layout_gravity="right|top"
        android:layout_row="3"
        android:onClick="stop"
        android:text="@string/button_stop" />

    <TextView
        android:id="@+id/textView1"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="1"
        android:text="1/3 Alpha"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:text="2/3 Alpha"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="left|top"
        android:layout_row="5" />

    <Button
        android:id="@+id/button3"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="6"
        android:onClick="test"
        android:text="@string/button_test" />

    <Button
        android:id="@+id/button4"
        android:layout_column="1"
        android:layout_gravity="right|top"
        android:layout_row="6"
        android:onClick="stop"
        android:text="@string/button_stop" />

    <SeekBar
        android:id="@+id/seekBar3"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="left|top"
        android:layout_row="8" />

    <TextView
        android:id="@+id/textView3"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="7"
        android:text="Alpha"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button5"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="9"
        android:onClick="test"
        android:text="@string/button_test" />

    <Button
        android:id="@+id/button6"
        android:layout_column="1"
        android:layout_gravity="right|top"
        android:layout_row="9"
        android:onClick="stop"
        android:text="@string/button_stop" />

    <Button
        android:id="@+id/buttonForward2"
        android:layout_column="1"
        android:layout_gravity="right|bottom"
        android:layout_row="10"
        android:onClick="forward"
        android:text="@string/button_forward" />

    <Button
        android:id="@+id/buttonBack2"
        android:layout_column="0"
        android:layout_gravity="left|bottom"
        android:layout_row="10"
        android:onClick="back"
        android:text="@string/button_back" />

    <TextView
        android:id="@+id/textView4"
        android:layout_column="1"
        android:layout_gravity="right|top"
        android:layout_row="1"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView5"
        android:layout_column="1"
        android:layout_gravity="right|top"
        android:layout_row="4"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView6"
        android:layout_column="1"
        android:layout_gravity="right|top"
        android:layout_row="7"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</GridLayout>