<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CalibrationDialog" >

    <TextView
        android:id="@+id/textIntensity"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_marginTop="0dp"
        android:layout_row="2"
        android:text="Intensität:"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textIntensityPercent"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_marginTop="0dp"
        android:layout_row="2"
        android:text="0.00%"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/buttonStartCalibration"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_marginTop="10dp"
        android:layout_row="3"
        android:onClick="startCalibration"
        android:text="START" />

    <Button
        android:id="@+id/buttonStopCalibration"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_marginTop="10dp"
        android:layout_row="3"
        android:onClick="stopCalibration"
        android:text="STOP" />

    <TextView
        android:id="@+id/textLastIntensity"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_marginTop="10dp"
        android:layout_row="4"
        android:text="Lezte Intensität:"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textLastIntensityPercent"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_marginTop="10dp"
        android:layout_row="4"
        android:text="0.00%"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/buttonCalibration"
        android:layout_width="fill_parent"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="left|top"
        android:layout_row="5"
        android:onClick="testIntensity"
        android:text="Teste Intensität 5s" />

    <Button
        android1:id="@+id/backButton"
        android1:layout_column="0"
        android1:layout_gravity="left|bottom"
        android1:layout_row="5"
        android1:onClick="back"
        android1:text="@string/button_back" />

    <Button
        android1:id="@+id/forwardButton"
        android1:layout_column="1"
        android1:layout_gravity="right|bottom"
        android1:layout_row="5"
        android1:onClick="forward"
        android1:text="@string/button_forward" />

    <TextView
        android1:id="@+id/calibrationTitle"
        android1:layout_width="wrap_content"
        android1:layout_column="0"
        android1:layout_columnSpan="2"
        android1:layout_gravity="top|center_horizontal"
        android1:layout_marginBottom="40dp"
        android1:layout_row="0"
        android1:text="@string/calibrate_title_left"
        android1:textAppearance="?android:attr/textAppearanceLarge" />

</GridLayout>